# quixe-qml

./: CMakeLists.txt  README.md  about.qml.in  manifest.json.in  quixe.apparmor  quixe.desktop.in
plugins/: CMakeLists.txt
plugins/Backend/: CMakeLists.txt  backend.cpp  backend.h  plugin.cpp  plugin.h
plugins/downloadinterceptor/: CMakeLists.txt  README.md  downloadinterceptor.cpp  downloadinterceptor.h  plugin.cpp  plugin.h  qmldir
po/: ca.mo  ca.po  es.po  fr.po  quixe.cibersheep.pot
qml/: DownloadingDialog.qml  ErrorDialog.qml  ExtractingDialog.qml  IfArchiveWebviewPage.qml  InstallPage.qml  Main.qml  WebviewPage.qml
qml/components/: ActionsForGame.qml  AppHeader.qml  AppHeaderMenu.qml  Divider.qml  GelekItemLayout.qml  HideHeader.qml  ImportGameBottomEdge.qml  ListItemHeader.qml  ListOfGames.qml  OpenDialog.qml
qml/js/: cssinjection.js
qml/www/: index.html  play.html
qml/www/lib/: glkote.min.js  quixe.min.js
qml/www/media/: dialog.css  glkote.css
